@@ -55,6 +55,7 @@ pyqtgraph-0.9.9  [unreleased]
     - Added InfiniteLine.setHoverPen
     - Added GLVolumeItem.setData
     - Added PolyLineROI.setPoints, clearPoints, saveState, setState
+    - Added ErrorBarItem.setData
 
   Bugfixes:
     - PlotCurveItem now has correct clicking behavior--clicks within a few px
